--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -49,12 +49,8 @@ nlu:
     - see you later
 
 
-#intent về khách hàng muốn mua xe
-- intent: muaxe
-  examples: |
-    - Tôi muốn mua một chiếc xe toyota
-    - Tôi đang tìm mua một chiếc xe Toyota
-    - Tôi quan tâm đến việc mua một chiếc xe Toyota.
+
+
 
 - intent: timhieudongxe
   examples: |
@@ -63,6 +59,12 @@ nlu:
     - Tôi muốn biết thêm về các dòng xe Toyota.
     - cửa hàng của bạn có các dòng xe nào
     - bên bạn có các dòng xe nào
+    - bên em có những loại xe nào
+    - xe bên em có nhưng loại nào
+    - em có thể cho anh biết bên em có những loại xe nào không
+    - anh muốn biết bên em có những dòng xe nào
+    - em có thể giới thiệu cho anh các dòng xe bên em đang có được không
+    
 
 - intent: giaxe
   examples: |
@@ -72,12 +74,19 @@ nlu:
     - giá của các dòng xe chủ yếu là bao nhiêu
     - giá cả của các dòng xe bên bạn là bao nhiêu
     - tôi muốn mua xe nhưng mà chưa biết giá ra sao bạn có thể cho tôi biết giá được không
+    - giá xe bên em giao động từ bao nhiêu
+    - những dòng xe bên em giá ra sao
+    - anh có thể tư vấn cho em giá xe bên anh như thế nào không
+    - giá xe bên anh bao nhiêu
+    - giá xe bên anh bình thường khoảng bao nhiêu
 
 - intent: tinhnangxe
   examples: |
     - Các dòng xe Toyota có những tính năng gì?
     - Tôi có thể tìm hiểu thêm về tính năng của xe Toyota ở đâu?
     - Tôi muốn biết về tính năng của các dòng xe Toyota.
+    - anh muốn biết xe có những gì
+    
 
 
 #dịch vụ cửa hàng
@@ -86,6 +95,10 @@ nlu:
     - Toyota có chương trình khuyến mãi nào không?
     - Tôi có thể tìm hiểu thêm về chương trình khuyến mãi của Toyota ở đâu?
     - Tôi muốn biết về chương trình khuyến mãi của Toyota.
+    - nếu anh mua xe thì có khuyến mãi gì không
+    - chị muốn mua xe thì có khuyến mãi gì cho chị không
+    - bên em đang có những ưu đãi gì khi anh mua xe
+    - em có khuyến mãi khi chị mua xe hay không
 
 - intent: datlichlaithuxe
   examples: |
@@ -96,6 +109,8 @@ nlu:
     - bây giờ a có thể lái thử xe không
     - làm sao để lái thử xe
     - thí dụ bây giờ anh có thể lái thử xe được không
+    - anh muốn lái thử xe thì làm sao
+    - chị muốn đặt lịch lái xe thì sao
 
 #chương trình mua xe
 - intent: quytrinhmuaxe
@@ -109,3 +124,13 @@ nlu:
     - anh muốn mua xe thì làm sao
     - chị muốn mua xe thì làm như thế nào
     - chú muốn mua xe bên cửa hàng thì làm sao
+    - bây giờ anh muốn mua xe thì có cần giấy tờ gì không
+    - cô muốn mua xe thì cần làm những gì
+    - Tôi muốn mua một chiếc xe toyota
+    - Tôi đang tìm mua một chiếc xe Toyota
+    - Tôi quan tâm đến việc mua một chiếc xe Toyota.
+    - Anh muốn mua xe thì phải làm sao
+    - Quy trình mua xe như nào
+    - chị muốn mua xe thì làm sao
+    - làm sao để a có thể mua một chiếc xe
+    - quy trình mua xe bên em ra sao
